Bug 1900339: don't send 0-byte OnDataAvailables from http decompression  a=RyanVM

Original Revision: https://phabricator.services.mozilla.com/D213720

Differential Revision: https://phabricator.services.mozilla.com/D213843